syntax = "proto3";

package user;

service UserService {
  rpc ListUsers (Empty) returns (UserListResponse);
}

message Empty {}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserListResponse {
  repeated UserResponse users = 1;
}